# KuchikiEngine

./: .gitignore  CMakeLists.txt  README.md
src/: KuchikiEngine.cpp
src/Calc/: KuchikiConstants.h
src/Camera/: Camera.cpp  Camera.h
src/Entities/: Mesh.h  Shape.h  Shapes.h
src/GLSL/: cube.frag  cube.vert
src/Inputs/: GUI.cpp  GUI.h  InputHandler.cpp  InputHandler.h
src/Scene/: Scene.cpp  Scene.h
src/Shader/: Shader.cpp  Shader.h
src/Shaders/: Shader.cpp  Shader.h
src/Window/: Window.cpp  Window.h
